# cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  OPENAPI_MIGRATION_GUIDE.md  README.md  cargo-audit-known-issues.list  check  debug_deserialization.sh  debug_reviewed_comments.sh  debug_text_markup.sh  pyproject.toml  test_debug
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml
api/: Cargo.toml  README.md
api/.openapi-generator/: FILES
api/src/: error.rs  errors.rs  lib.rs  retry.rs
api/src/apis/: alerts_api.rs  analytics_api.rs  appliance_configs_api.rs  attachments_api.rs  audit_events_api.rs  buckets_api.rs  comments_api.rs  conversational_filter_api.rs  dashboards_api.rs  datasets_api.rs  deployment_api.rs  deprecation_api.rs  documents_api.rs  emails_api.rs  files_api.rs  integrations_api.rs  ixp_datasets_api.rs  ixp_models_api.rs  ixp_projects_api.rs  label_defs_api.rs  label_groups_api.rs  metadata_api.rs  mod.rs  model_family_api.rs  models_api.rs  permissions_api.rs  projects_api.rs  quotas_api.rs  search_api.rs  sources_api.rs  streams_api.rs  tenants_api.rs  themes_api.rs  thread_themes_api.rs  triggers_api.rs  uipath_provisioning_api.rs  users_api.rs
api/src/models/: _audit_events_dataset.rs  _audit_events_user.rs  _bucket_statistics.rs  _by_labels_include_container.rs  _by_labels_top_container.rs  _dataset_string_summary_value.rs  _dataset_user_properties_summary_number.rs  _dataset_user_properties_summary_string.rs  _entity_summary_v1.rs  _exact_bucket_count.rs  _lower_bound_bucket_count.rs  _query_comments_order_any_label.rs  _query_comments_order_attachment_text_search.rs  _query_comments_order_by_label.rs  _query_comments_order_check.rs  _query_comments_order_diagnostic.rs  _query_comments_order_label_property.rs  _query_comments_order_learning.rs  _query_comments_order_missed.rs  _query_comments_order_recent.rs  _query_comments_order_sample.rs  _query_comments_order_text_search.rs  _query_dataset_user_property_values_filter.rs  _raw_email_body.rs  _raw_email_headers_raw.rs  _source_statistics.rs  _thread_histogram_binning_custom_container.rs  _thread_histogram_binning_variable_container.rs  access.rs  add_comments_request.rs  add_comments_response.rs  add_emails_to_bucket_response.rs  add_support_tenant_response.rs  advance_stream_response.rs  advance_trigger_response.rs  alert_config.rs  alert_issues_response.rs  alert_process_threshold.rs  alert_process_variation.rs  alert_update.rs  (+507 more)
api/src/resources/: attachments.rs  audit.rs  auth.rs  bucket.rs  bucket_statistics.rs  comment.rs  dataset.rs  documents.rs  email.rs  entity_def.rs  integration.rs  label_def.rs  label_group.rs  mod.rs  project.rs  quota.rs  source.rs  statistics.rs  stream.rs  tenant_id.rs  trigger.rs  user.rs  validation.rs
cli/: Cargo.toml  build.rs  convert-comments.py  publish-binaries
cli/src/: args.rs  config.rs  errors.rs  main.rs  printer.rs  progress.rs  thousands.rs  utils.rs
cli/src/commands/: auth.rs  config.rs  delete.rs  get.rs  mod.rs
cli/src/commands/alpha/: mod.rs  take_more_labels.rs
cli/src/commands/create/: annotations.rs  bucket.rs  comments.rs  dataset.rs  emails.rs  integrations.rs  mod.rs  project.rs  quota.rs  source.rs  stream_exception.rs  streams.rs  trigger_exception.rs  user.rs
cli/src/commands/get/: audit_events.rs  buckets.rs  comments.rs  custom_label_trend_report.rs  datasets.rs  emails.rs  integrations.rs  keyed_sync_states.rs  mod.rs  projects.rs  quota.rs  sources.rs  streams.rs  triggers.rs  users.rs
cli/src/commands/package/: download.rs  mod.rs  upload.rs
cli/src/commands/parse/: aic_classification_csv.rs  emls.rs  mod.rs  msgs.rs  pff.rs  pff_sys.rs  pst.rs
cli/src/commands/task/: mod.rs  take_more_labels.rs
cli/src/commands/update/: dataset.rs  mod.rs  project.rs  source.rs  users.rs
cli/src/utils/: api_utils.rs  attachment_utils.rs  audit_events_iterator.rs  comment_timestamp_filter.rs  comment_utils.rs  csv.rs  dataset_query_iter.rs  full_name.rs  get_current_user.rs  id.rs  io.rs  label_name.rs  mod.rs  model_config.rs  model_version.rs  new_annotated_comment.rs  openapi_split_examples.rs  openapi_split_on_failure.rs  permissions.rs  project_name.rs  query_comments_csv.rs  refresh_permissions.rs  resource_identifier.rs  retry.rs  stream_full_name.rs  transform_tag.rs  user_properties_filter.rs
cli/src/utils/auth/: current_user.rs  mod.rs  permissions.rs  refresh.rs
cli/src/utils/conversions/: comments.rs  entities.rs  mod.rs  moon_forms.rs  names.rs  spans.rs
cli/src/utils/filters/: attributes.rs  mod.rs  timerange.rs
cli/src/utils/iterators/: audit_events.rs  dataset_query.rs  mod.rs
cli/src/utils/openapi/: api_ext.rs  mod.rs  split_examples.rs  split_failure.rs
cli/src/utils/types/: identifiers.rs  mod.rs  model.rs  names.rs  project.rs  stream.rs  transform.rs
cli/tests/: common.rs  test_buckets.rs  test_comments.rs  test_datasets.rs  test_projects.rs  test_sources.rs  tests.rs
cli/tests/samples/: audio.jsonl  basic.jsonl  duplicates.jsonl  labelling.jsonl  legacy_labelling.jsonl  many.jsonl  moon_forms.jsonl  non-unicode.msg  phone-call-1.flac  test.eml  test.pst.json  unicode.msg
client/: Cargo.toml
client/docs/: AddCommentsRequest.md  AddCommentsResponse.md  AddEmailsToBucketRequest.md  AddEmailsToBucketResponse.md  AddSupportTenantRequest.md  AdvanceStreamRequest.md  AdvanceTriggerRequest.md  AdvanceTriggerResponse.md  Alert.md  AlertConfig.md  AlertFilter.md  AlertIssuesResponse.md  AlertMetric.md  AlertNew.md  AlertProcessThreshold.md  AlertProcessVariation.md  AlertSubscription.md  AlertUpdate.md  AnalyticsApi.md  Annotation.md  Annotations.md  AppAccessModelKind.md  ApplianceConfigsApi.md  AssignedPredictedPresentFilter.md  Attachment.md  AttachmentsApi.md  Attribute.md  AttributeFilter.md  AttributionMethod.md  AuditEvent.md  AuditEventsApi.md  (+621 more)
csv/: Cargo.toml  pyproject.toml  test.csv
csv/src/: comment.rs  lib.rs  python.rs
scripts/: README.md  build-install  check  check-versions  gen-client.sh  publish  publish-install  update-and-generate.sh  update-spec.sh
(+445 files in other folders)
