[package]
name = "reinfer-client"
version = "0.12.0"
description = "API client for Re:infer, the conversational data intelligence platform"
homepage = "https://github.com/reinfer/cli"
readme = "README.md"
authors = ["reinfer Ltd. <eng@reinfer.io>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "reinfer_client"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
log = "0.4.17"
once_cell = "1.12.0"
ordered-float = { version = "3.0.0", features = ["serde"] }
regex = "1.5.6"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "gzip", "json", "multipart", "native-tls-vendored"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_with = "1.14.0"
thiserror = "1.0.31"
url = "2.2.2"

[dev-dependencies]
mockito = "0.31.0"
