[package]
name = "reinfer-client"
version = "0.21.2"
description = "API client for Re:infer, the conversational data intelligence platform"
homepage = "https://github.com/reinfer/cli"
readme = "README.md"
authors = ["reinfer Ltd. <eng@reinfer.io>"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "reinfer_client"

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
http = "0.2.9"
log = "0.4.17"
matches = "0.1.10"
once_cell = "1.16.0"
ordered-float = { version = "3.9.1", features = ["serde"] }
regex = "1.6.0"
reqwest = { version = "0.11.12", default-features = false, features = ["blocking", "gzip", "json", "multipart", "native-tls-vendored"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_with = "2.0.1"
thiserror = "1.0.37"
url = "2.3.1"

[dev-dependencies]
mockito = "0.31.0"
