[package]
name = "reinfer-cli"
version = "0.13.4"
description = "Command line interface for Re:infer, the conversational data intelligence platform"
homepage = "https://github.com/reinfer/cli"
readme = "README.md"
authors = ["reinfer Ltd. <eng@reinfer.io>"]
license = "Apache-2.0"
edition = "2021"
autotests = false

[[bin]]
name = "re"
path = "src/main.rs"

[[test]]
name = "tests"

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.22"
colored = "2.0.0"
dirs = "4.0.0"
env_logger = "0.10.0"
indicatif = "0.17.0"
log = { version = "0.4.17", default-features = false, features = ["release_max_level_info"] }
maplit = "1.0.2"
once_cell = "1.16.0"
prettytable-rs = "0.10.0"
regex = "1.6.0"
reqwest = { version = "0.11.12", default-features = false }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
structopt = { version = "0.3.26", default-features = false }
url = { version = "2.3.1", features = ["serde"] }

reinfer-client = { version = "0.13.4", path = "../api" }
dialoguer = "0.10.4"

[dev-dependencies]
pretty_assertions = "1.3.0"
uuid = { version = "1.2.1", features = ["v4"] }

[features]
default = []

# Print backtrace on error.
backtrace = []
