[package]
name = "reinfer_csv"
version = "0.1.0"
authors = ["reinfer Ltd. <eng@reinfer.io>"]
edition = "2018"

[lib]
name = "reinfer_csv"
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
csv = "1.1.3"
pyo3 = "0.11.1"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"

[features]
extension-module = ["pyo3/extension-module"]
# default = ["extension-module"]
default = []
