[tool.poetry]
name = "reinfer-csv"
version = "0.1.0"
description = "Utility for converting CSVs to Re:infer's comment JSON format."
authors = ["reinfer Ltd. <eng@reinfer.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
